--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "quiz-tok",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Antonchik2007.github.io/quiz-tok",
   "dependencies": {
+    "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -13,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -32,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
